--- a/rusty-book-manager/Cargo.toml
+++ b/rusty-book-manager/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.95"
 axum = { version = "0.8.1", features = ["macros"] }
+sqlx = { version = "0.8.3", features = ["runtime-tokio", "uuid", "chrono", "macros", "postgres", "migrate"] }
 tokio = { version = "1.37.0", features = ["full"] }
 
 [dev-dependencies]
+cargo-nextest = "0.9.91"
 rstest = "0.24.0"
