--- a/rusty-book-manager/Cargo.toml
+++ b/rusty-book-manager/Cargo.toml
@@ -3,12 +3,30 @@ name = "rusty-book-manager"
 version = "0.1.0"
 edition = "2021"
 
-[dependencies]
+[[bin]]
+name = "app"
+path = "src/bin/app.rs"
+
+[workspace]
+members = ["api", "kernel", "adapter", "shared", "registry"]
+
+[workspace.dependencies]
+adapter = { path = "./adapter" }
+api = { path = "./api" }
+kernel = { path = "./kernel" }
+shared = { path = "./shared" }
+registry = { path = "./registry" }
 anyhow = "1.0.95"
 axum = { version = "0.8.1", features = ["macros"] }
 sqlx = { version = "0.8.3", features = ["runtime-tokio", "uuid", "chrono", "macros", "postgres", "migrate"] }
 tokio = { version = "1.37.0", features = ["full"] }
 
-[dev-dependencies]
-cargo-nextest = "0.9.91"
-rstest = "0.24.0"
+[dependencies]
+adapter.workspace = true
+api.workspace = true
+registry.workspace = true
+shared.workspace = true
+anyhow.workspace = true
+tokio.workspace = true
+axum.workspace = true
+sqlx.workspace = true
