--- a/rusty-book-manager/Cargo.toml
+++ b/rusty-book-manager/Cargo.toml
@@ -20,6 +20,7 @@ anyhow = "1.0.95"
 axum = { version = "0.8.1", features = ["macros"] }
 sqlx = { version = "0.8.3", features = ["runtime-tokio", "uuid", "chrono", "macros", "postgres", "migrate"] }
 tokio = { version = "1.37.0", features = ["full"] }
+async-trait = "0.1.86"
 
 [dependencies]
 adapter.workspace = true
@@ -30,3 +31,4 @@ anyhow.workspace = true
 tokio.workspace = true
 axum.workspace = true
 sqlx.workspace = true
+async-trait.workspace = true
